--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,15 +1,15 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Projects"
+permalink: /Projects/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+{% for post in site.projects %}
   {% include archive-single.html %}
 {% endfor %}
 
-Wait to be finished....
+Wait to be finished....11
