new upload for projects change

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -12,4 +12,4 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %}
 
-Wait to be finished....11
+<!-- Wait to be finished....11 -->
